k8s/react.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react
  namespace: app
  labels:
    app: react
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: react
                topologyKey: kubernetes.io/hostname
      containers:
        - name: react
          image: ghcr.io/michaeltg17/aws-react:__REACT_IMAGE_TAG__
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 384Mi
---
apiVersion: v1
kind: Service
metadata:
  name: react
  namespace: app
  labels:
    app: react
spec:
  type: ClusterIP
  selector:
    app: react
  ports:
    - name: http
      port: 80
      targetPort: 3000
